bad/assign_arr_elem_int_null.example_compiler_output
ERROR
[1mbad/assign_arr_elem_int_null.lat:4:18: [1;31merror: [0;1massigning to `int` from incompatible type `null`[m
	(new int[3])[1] = null;
	                [1;32m^[m
